fix navbar overflow

--- a/ucbugg-site/src/styles/Navbar.module.css
+++ b/ucbugg-site/src/styles/Navbar.module.css
@@ -4,7 +4,7 @@
 }
 
 .Navbar {
-  width: 100%;
+  width: 100vw;
   height: 60px;
   display: flex;
   flex-direction: row;
